# metric-metadata-service

./: .cookiecutter.json  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: build-and-deploy-dev.yaml  build-and-deploy-prod.yaml  run-tests.yaml  validate-k8s.yaml
docker/: .env  Dockerfile  Dockerfile.base  Dockerfile.development  Dockerfile.production  docker-compose.yaml  startup.sh
env/: compose.env  development.env  test.env
kubernetes/development/: 000_postgrescn.yaml  00_service-account.yaml  01_configmap.yaml  01_external_secrets.yaml  02_migrations_job.yaml  03_deployment.yaml  04_service.yaml  05_virtual-service.yaml  06_auth_policies.yaml  07_horizontal_pod_autoscaler.yaml
kubernetes/production/: 00_service-account.yaml  01_configmap.yaml  01_external_secrets.yaml  02_migrations_job.yaml  03_deployment.yaml  04_service.yaml  05_virtual-service.yaml  06_auth_policies.yaml  07_horizontal_pod_autoscaler.yaml
pulumi/: Pulumi.dev.yaml  Pulumi.prod.yaml  Pulumi.yaml  __main__.py  config.py  database.py  requirements.txt
scripts/: await_migrations.sh  init_database.sh  load_env_var.sh  run_local_env.sh  run_test_env.sh  run_tests.sh  run_with_local_poetry_venv.sh
src/: alembic.ini  cli.sh
src/alembic/: env.py
src/app/: cli.py  create_app.py  cron_jobs.py  dependencies.py  env.py  main.py
src/app/auth/: JWTAuthorizer.py  __init__.py  (+3 more)
tests/: conftest.py
tests/e2e/: conftest.py  test_auth.py  test_data_metric.py  test_event.py  test_health.py  test_items.py  test_metric.py  test_metric_set.py  test_metric_set_tree.py  test_property.py
tests/integration/: conftest.py  test_organizations.py
tests/unit/: conftest.py  test_dto.py
(+99 files in other folders)
